menu z-index fix

--- a/css/menu.css
+++ b/css/menu.css
@@ -3,7 +3,7 @@
 	direction: rtl;
     position: relative;
 	color: #7b7b7b;
-    z-index: 1000;
+    z-index: 901;
 }
 
 #menu a {
